Added the score saving for each game and leaderboard to show top ten players
